{{$NEXT}}

0.0.11  2021-04-07T11:46:08+12:00
    - Adjust tests for CSS::Properties v0.6.5+

0.0.10  2021-04-02T11:33:39+13:00
    - Completion of CSS::TagSet::Pango

0.0.9  2021-04-01T18:12:45+13:00
    - Add prune() method.

0.0.8  2021-03-23T13:48:50+13:00
    - Add script bin/css-rewriter.raku
    - Add rule-set and style-sheet Str() and gist() methods
    - Don't provide default :media for CSS::Stylesheet

0.0.7  2021-03-16T11:43:23+13:00
    - Fix for CSS::Properties v0.6.0+ compatibility; withdrawn parent() method
    - Add CSS::TagSet::Pango

0.0.5 2020-06-02
    - Add exports: CSS::Media :MediaType, :MediaLen, :MediaRes, :MediaOrientation
0.0.4 2020-03-02
    - Rename sources *.pm6 -> *.rakumod; *.p6 -> *.raku
    - Fixed handling of inline style !important properties
0.0.3 2019-12-27
    - Add Media Queries
0.0.2 2019-12-26
    - Fixed failing test #1
0.0.1 2019-12-25
    - Initial release