@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Tweak/document css-inliner.raku script
+    - More TaggedPDF development
 
 0.0.11  2021-04-07T11:46:08+12:00
     - Adjust tests for CSS::Properties v0.6.5+
